Fixing social icon div spacing

--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,7 @@ text-decoration: underline;
 .social-contact {
   width: 100%;
   margin: 0 auto;
-  padding: 40px; }
+  padding: 74px; }
 
 .social-contact_inner {
   margin: 0 auto;
